Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-122776

Qt for webassembly doesn't respect Qt::WA_ShowWithoutActivating for QDialog

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.0 FF
    • 6.6.0, 6.6.2, 6.7.0 Beta3
    • None
    • Windows 10, Debian 12
    • WebAssembly
    • 0737fca6b (dev)

    Description

      Qt for webassembly is not respecting Qt::WA_ShowWithoutActivating attribute for QDialog.

      I have attach an example project where there is a QLineEdit with focus and then a QDialog  pops up, removing the focus of the QLineEdit. This issue only happens in webassembly. On Windows and Linux the QLineEdit does not lose the focus.

      In practice this is annoying when using QDialogs to create notifications to the user as these will steal the focus from the user focused widget.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            evenandersen Even Oscar Andersen
            qtuser32 Random Guy
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes