src/plugins/platforms/wasm/qwasmwindowtreenode.cpp
@@ -39,8 +39,12 @@ void QWasmWindowTreeNode::onSubtreeChanged(QWasmWindowTreeNodeChangeType changeT
                                            QWasmWindowTreeNode *parent, QWasmWindow *child)
 {
     if (changeType == QWasmWindowTreeNodeChangeType::NodeInsertion && parent == this
-        && m_childStack.topWindow()) {
-        m_childStack.topWindow()->requestActivateWindow();
+        && m_childStack.topWindow()
+        && m_childStack.topWindow()->window()) {
+
+        const QVariant showWithoutActivating = m_childStack.topWindow()->window()->property("_q_showWithoutActivating");
+        if (!showWithoutActivating.isValid() || !showWithoutActivating.toBool())
+            m_childStack.topWindow()->requestActivateWindow();
     }
 
     if (parentNode())
